package collection;
/**
 * classe matière.
 */
public class Matiere {
    /**
     * attribut nom.
     */
    private String nom;
    /**
     * constructeur.
     */
    public Matiere(String nom) {
        this.nom = nom;
    }
    /**
     * getter nom.
     */
    public String getNom() {
        return nom;
    }   
}
