@startuml diagramme de classe formation
title Diagramme de classe formation
class Etudiant {
    - resultat : Map<Matiere, double[]>
    + CalculMoyenneEtudiant() : double
    + GetResultats(matiere) : list <Resultat>
}

class Matiere {
    - nom : String
}

class Identite {
    - NIP : int
    - Nom : String
    - Prenom : String
}

class Formation {
    - identifiant : String
    - matieres : Map<Matiere, double>
}

class GroupeEtudiant {
    - etudiants : Set<Etudiant>
    + CalculerMoyenneGroupeEtudiant(matiere) : double
}

Etudiant "1" --> "1" Identite
Etudiant "1" --> "1..*" Matiere
Etudiant "1" --> "1" Formation
Formation "1" --> "1..*" Matiere
Formation "1" <-- "1" GroupeEtudiant
GroupeEtudiant "1" --> "1..*" Etudiant


@enduml